--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Arnau Siches <asiches@gmail.com>"]
 
 [[bin]]
 name = "sac"
-test = true
+test = false
 doc = false
 
 [lib]
@@ -16,7 +16,7 @@ path = "src/lib.rs"
 clap = "2.31"
 env_logger = "0.5.9"
 failure = "0.1"
-lazy_static = "1.0"
+lazy_static = "1"
 log = "0.4.0"
 regex = "0.2"
 ring = "0.12"
