--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,5 +29,6 @@ ring = "0.12"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+url = "1.7"
 # shell-escape = "~0.1.4"
 # termcolor = "~0.3.6"
