--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,17 +18,18 @@ name = "sac"
 path = "src/lib.rs"
 
 [dependencies]
+# shell-escape = "~0.1.4"
+# termcolor = "~0.3.6"
+#https://crates.io/crates/slog
 clap = "2.31"
 env_logger = "0.5.9"
 failure = "0.1"
 lazy_static = "1"
 log = "0.4.0"
-#https://crates.io/crates/slog
+pulldown-cmark = { version = "0.1", default-features = false }
 regex = "1.0"
 ring = "0.12"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 url = "1.7"
-# shell-escape = "~0.1.4"
-# termcolor = "~0.3.6"
