--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ path = "src/lib.rs"
 [dependencies]
 # shell-escape = "~0.1.4"
 # termcolor = "~0.3.6"
+# exitcode
 #https://crates.io/crates/slog
 clap = "2.31"
 env_logger = "0.5.9"
