feat(Schema): Handle primary key on its own to make it impossible to not define the field for the primary key
Signed-off-by: Arnau Siches <asiches@gmail.com>

--- a/examples/country.toml
+++ b/examples/country.toml
@@ -2,16 +2,11 @@ id = "country"
 label = "Country"
 description = "British English-language names and descriptive terms for countries."
 custodian = "Foreign & Commonwealth Office"
-primary-key = "country"
 
-[[fields]]
+[primary-key]
 id = "country"
-type = "string"
-cardinality = "1"
 label = "Country"
 description = "The country's 2-letter ISO 3166-2 alpha2 code."
-unique = true
-required = true # TODO: Implicit because primary-key?
 
 [[fields]]
 id = "name"
